@@ -4,4 +4,4 @@
   :author "Yoshinori Tahara <read.eval.print@gmail.com>"
   :version "0.3"
   :components ((:file "iconv"))
-  :depends-on (cffi))
+  :depends-on (cffi iolib))
